# my-wasmpj

./: Cargo.toml  my_wasmpj.d.ts  my_wasmpj_bg.js  my_wasmpj_bg.wasm  my_wasmpj_bg.wasm.d.ts  package.json
pkg/: my_wasmpj.js  package.json
src/: lib.rs
