[package]
name = "my-wasmpj"
version = "0.1.0"
authors = ["Daichi Yoshida <daichi.yoshida@hacobu.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib] 
crate-type = ["cdylib"] 

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Window'
]